# DJANGO5-master

./: .dockerignore  .editorconfig  .file_size_baseline.json  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .remediation_milestone  ABSOLUTE_FINAL_VERIFICATION_100_PERCENT.md  ACTIVITY_APP_TESTING_PHASE5_COMPLETE.md  ACTIVITY_JOB_MODELS_QUICK_REFERENCE.md  ACTIVITY_MODELS_JOB_REFACTORING_COMPLETE.md  AGENT32_FINAL_REPORT.md  AGENT33_DEEP_NESTING_FLATTENING_COMPLETE.md  AGENT39_FINAL_VALIDATION_RESULTS.md  AGENT8_GOD_FILE_REFACTORING_COMPLETE.md  AGENT_9_COMPLETION_REPORT.md  AI_FIRST_OPERATIONS_COMPLETE_SUMMARY.md  AI_ML_MODELS_REFACTORING_COMPLETE.md  AI_ML_MODELS_STRUCTURE.md  ALERT_CLUSTERING_QUICK_START.md  ALTERNATIVE_MQTT_SETUP.md  ANDROID_BACKEND_HANDOFF_COMPLETE.md  ANDROID_COMPLETE_MODEL_REFERENCE.md  ANDROID_MIGRATION_VISUAL_GUIDE.md  ANDROID_REQUIREMENTS_FILLED.md  ANDROID_REQUIREMENTS_INDEX.md  ANDROID_SCHEMA_CHANGES_CHECKLIST.md  ANDROID_SCHEMA_CHANGES_SUMMARY.md  ANDROID_SYNC_FLOW_COMPLETE.md  ANTI_PATTERNS_SUMMARY.txt  API_CONTRACT_COMPLIANCE_COMPLETE.md  APPS_CORE_IMPROVEMENTS_COMPLETE.md  APPS_CORE_PHASE_3_4_COMPLETE.md  APPS_SERVICE_SECURITY_FIXES_COMPLETE.md  ATTENDANCE_ENHANCEMENT_FILE_INDEX.md  ATTENDANCE_ENHANCEMENT_FINAL_COMPREHENSIVE_REPORT.md  ATTENDANCE_ENHANCEMENT_PROGRESS_REPORT.md  ATTENDANCE_FINAL_CORRECTED_SUMMARY.md  ATTENDANCE_GPS_CONSENT_CLARIFICATION.md  (+483 more)
.archive/: onboarding_admin.py_20251001_080540  reports_views.py_20251001_080538  service_utils.py_20251001_080541
.githooks/: README.md  post-commit-extract.sh  pre-commit  pre-commit-celery-beat-validation  pre-commit-celery-validation  pre-commit-code-quality  pre-commit-exception-check  pre-commit-legacy-code-check  pre-commit-logging-security  pre-commit-ontology-validation  pre-commit-ontology.py  pre-commit.backup  validate-model-complexity  validate-transaction-usage.py
.github/: INSTALL_GUIDE.md
background_tasks/: __init__.py  __init___new.py  agent_tasks.py  ai_testing_tasks.py  core_tasks_refactored.py  (+35 more)
(+5502 files in other folders)
