[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']  # Aligned with .python-version (3.11.9) - 2025-10-11 remediation
include = '\.pyi?$'
extend-exclude = '''
/(
    # directories
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | build
    | dist
    | migrations
    | node_modules
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_django = "django"
known_first_party = ["apps", "intelliwiz_config", "background_tasks"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
skip_glob = ["*/migrations/*", "*/venv/*", "*/node_modules/*"]
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"  # Aligned with .python-version (3.11.9) - 2025-10-11 remediation
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = [
    'migrations/',
    'venv/',
    'node_modules/',
    'tests/',
]

[[tool.mypy.overrides]]
module = [
    "django.*",
    "celery.*",
    "environ.*",
    "dj_database_url.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["apps", "background_tasks", "intelliwiz_config"]
omit = [
    "*/migrations/*",
    "*/venv/*",
    "*/tests/*",
    "*/node_modules/*",
    "manage.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "intelliwiz_config.settings_test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--tb=short --strict-markers --strict-config --cov"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "security: Security tests",
    "performance: Performance tests",
]